force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__Backup_User__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Backup_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The backup/delegate user for the current user.</description>
    <inlineHelpText>The backup/delegate user for the current user.</inlineHelpText>
    <label>Backup/Delegate User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N700000028l1cEAA</relationshipName>
    <type>Lookup</type>
</CustomField>