force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__Comment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Comment__c</fullName>
    <description>Enter a comment to the person you are setting as your backup/delegate.</description>
    <inlineHelpText>Enter a comment to the person you are setting as your backup/delegate.</inlineHelpText>
    <label>Comment</label>
    <type>TextArea</type>
</CustomField>