force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__Current_User__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Current_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who for whom the backup or delegate approver applies.</description>
    <inlineHelpText>The user who for whom the backup or delegate approver applies.</inlineHelpText>
    <label>Current User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N700000028l1fEAA</relationshipName>
    <type>Lookup</type>
</CustomField>