force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__InEffect__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__InEffect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this means this backup/delegate is in effect.  A backup/delegate can be active, in effect, or both.  In order for requests to be actively assigned to the backup/delegate they must be active and in effect.</description>
    <inlineHelpText>When checked this means this backup/delegate is in effect.  A backup/delegate can be active, in effect, or both.  In order for requests to be actively assigned to the backup/delegate they must be active and in effect.</inlineHelpText>
    <label>In Effect</label>
    <type>Checkbox</type>
</CustomField>