force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__IsDelegate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__IsDelegate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If unchecked, requests assigned to the current user get assigned to the backup instead.  When checked, requests assigned to the current user remain assigned to them but their delegates are notified and can take action on the requests as well.</description>
    <inlineHelpText>If unchecked, requests assigned to the current user get assigned to the backup instead.  When checked, requests assigned to the current user remain assigned to them but their delegates are notified and can take action on the requests as well.</inlineHelpText>
    <label>Is Delegate</label>
    <type>Checkbox</type>
</CustomField>