force-app/main/default/objects/Apttus_Approval__Backup_Approver__c/fields/Apttus_Approval__SuppressDelegateNotification__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SuppressDelegateNotification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to enable/disable notification to Delegate Approver.</description>
    <inlineHelpText>Indicator to enable/disable notification to Delegate Approver.</inlineHelpText>
    <label>Suppress Delegate Notification</label>
    <type>Checkbox</type>
</CustomField>